# spacy-experimental-typing

./: README.md  pyproject.toml
src/spacy_experimental_typing/: __init__.py  types.py
